--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-jwt": "^5.3.3",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
