--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "slugify": "^1.4.0"
   }
 }
